5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1807_2569.log
== TEST (2019-06-09 18:10:49) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(a):
	b = b + sqrt((a[i]-(sum(a)/2)**2)/size(a)-1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:11:24) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(a):
	b = b + sqrt((a[i]-(sum(a)/2)**2)/size(a)-1)
print(round(b,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:12:06) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + sqrt((a[i]-(sum(a)/2)**2)/size(a)-1)
print(round(b,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:12:42) 
-- CODE:
from numpy import *
from math import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + sqrt((a[i]-(sum(a)/2)**2)/size(a)-1)
print(round(b,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:13:50) 
-- CODE:
from numpy import *
from math import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + ((a[i]-(sum(a)/2)**2)/size(a)-1)**(1/2)
print(round(b,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:16:26) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(sum(a))**2
print(round(b,3))
-- ERROR:
File "XXXX", line 6
    print(round(b,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:17:42) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(sum(a))**2)
print(round(b,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:18:20) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(size(a))**2)
print(round(b,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:18:51) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(size(a)))**2
print(round(b,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:19:25) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(size(a)))**2
	
print(round(sqrt(b),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:20:36) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(size(a)))**2
b=sqrt(b/size(a))
	
print(round(sqrt(b),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:20:51) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(sum(a)))**2
b=sqrt(b/size(a))
	
print(round(sqrt(b),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:22:10) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(sum(a)/size(a)))**2
b=sqrt(b/size(a)-1)
	
print(round(sqrt(b),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:23:44) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(size(a)/2)**2
b=sqrt(b/size(a)-1)
	
print(round(sqrt(b),3))
-- ERROR:
File "XXXX", line 6
    b=sqrt(b/size(a)-1)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:24:02) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(size(a)/2)**2)
b=sqrt(b/size(a)-1)
	
print(round(sqrt(b),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:42:01) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(size(a)/2))**2
b=sqrt(b/size(a)-1)
	
print(round(sqrt(b),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:43:32) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(sum(a)/2))**2
b=sqrt(b/size(a)-1)
	
print(round(sqrt(b),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:44:02) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(sum(a)/size(a)))**2
b=sqrt(b/size(a)-1)
	
print(round(sqrt(b),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:48:40) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(sum(a)/size(a)))**2
b=sqrt(b/size(a)-1)
	
print(round(sqrt(b),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:49:41) 
-- CODE:
from numpy import *
from math import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(sum(a)/size(a)))**2
b=sqrt(b/size(a)-1)
	
print(round(b,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:50:07) 
-- CODE:
from numpy import *
from math import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)+1):
	b = b + (a[i]-(sum(a)/size(a)))**2
b=sqrt(b/size(a)-1)
	
print(round(b,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:50:55) 
-- CODE:
from numpy import *
from math import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(sum(a)/size(a)))**2
b=sqrt(b/size(a))
	
print(round(b,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 19:51:43) 
-- CODE:
from numpy import *
from math import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(sum(a)/size(a)))**2
b=sqrt(b/size(a))
	
print(round(b,3))
-- EXECUTION TIME:
1.12111
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
97.043
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
19.254
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.269
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:55:34) 
-- CODE:
from numpy import *
from math import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(sum(a)/size(a)))**2
b=sqrt(b/size(a))
	
print(round(b,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 19:56:13) 
-- CODE:
from numpy import *
from math import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(sum(a)/size(a)))**2
b=sqrt(b/(size(a)-1))
	
print(round(b,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 19:56:27) 
-- CODE:
from numpy import *
from math import *
a=array(eval(input("vetor: ")))
b = 0
for i in range(size(a)):
	b = b + (a[i]-(sum(a)/size(a)))**2
b=sqrt(b/(size(a)-1))
	
print(round(b,3))
-- EXECUTION TIME:
0.915189
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
